<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_map_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_over"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_map_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/fragment_map_container"
        app:layout_constraintStart_toStartOf="@+id/fragment_map_main"
        app:layout_constraintTop_toTopOf="@+id/fragment_map_main">

        <TextView
            android:id="@+id/map_text_commute_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/text_commute_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/fragment_map_text"
            app:layout_constraintTop_toTopOf="@+id/fragment_map_text" />

        <TextView
            android:id="@+id/map_field_commute_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/field_commute_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/map_text_commute_duration"
            app:layout_constraintStart_toEndOf="@+id/map_text_commute_name"
            app:layout_constraintTop_toTopOf="@+id/fragment_map_text" />

        <TextView
            android:id="@+id/map_text_commute_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_marginEnd="5dp"
            android:text="@string/text_commute_duration"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/map_field_commute_duration"
            app:layout_constraintTop_toTopOf="@+id/fragment_map_text" />

        <TextView
            android:id="@+id/map_field_commute_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="end"
            android:text="@string/field_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/fragment_map_text"
            app:layout_constraintTop_toTopOf="@+id/fragment_map_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_map_main"
        app:layout_constraintStart_toStartOf="@+id/fragment_map_main"
        app:layout_constraintTop_toBottomOf="@+id/fragment_map_text">

        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_map_container"
            app:layout_constraintStart_toStartOf="@+id/fragment_map_container">

            <ImageView
                android:id="@+id/placeholder_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_map"
                app:srcCompat="@drawable/map_placeholder2" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_map_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_map_container"
        app:layout_constraintStart_toStartOf="@+id/fragment_map_container"
        app:layout_constraintTop_toBottomOf="@+id/fragment_map_container">

        <ImageButton
            android:id="@+id/map_button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/button_return"
            android:onClick="doMapReturn"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_map_buttons"
            app:layout_constraintStart_toStartOf="@+id/fragment_map_buttons"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/map_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/button_add"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_map_buttons"
            app:layout_constraintEnd_toEndOf="@+id/fragment_map_buttons"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/map_button_enhance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/description_enhance_map_button"
            android:onClick="doMapEnhance"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_map_buttons"
            app:layout_constraintEnd_toEndOf="@+id/fragment_map_buttons"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>