<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_commutes_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commutes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"></androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_commutes_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/commutes_button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/button_return"
            android:scaleX="2"
            android:scaleY="2"
            android:onClick="doCommutesReturn"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_commutes_buttons"
            app:layout_constraintStart_toStartOf="@+id/fragment_commutes_buttons"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/commutes_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/button_add"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_commutes_buttons"
            app:layout_constraintEnd_toEndOf="@+id/fragment_commutes_buttons"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/commutes_button_enhance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:contentDescription="@string/description_enhance_commutes_button"
            android:onClick="doCommutesEnhance"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_commutes_buttons"
            app:layout_constraintEnd_toEndOf="@+id/fragment_commutes_buttons"
            app:srcCompat="@android:drawable/ic_menu_agenda" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>